# job_parsing

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
hh/: admin.py  crawl.py  models.py  tasks.py
hh/management/commands/: releasespider.py
hh/migrations/: 0001_initial.py  0002_hhitems_last_update.py  0003_remove_hhitems_number_hhitems_code_alter_hhitems_exp_and_more.py  0004_alter_hhitems_last_update.py
job_scraping/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
scraper/: items.py  pipelines.py  settings.py
scraper/spiders/: job.py
